--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -78,6 +78,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:paddingLeft="2dp"
+            android:paddingBottom="5dp"
             android:text="21"
             android:textAlignment="center"
             android:textSize="28sp"
