--- a/app/src/main/res/layout/write_layout_alignment.xml
+++ b/app/src/main/res/layout/write_layout_alignment.xml
@@ -24,9 +24,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal"
                 android:background="@drawable/write_activity_menu_popup"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_write_activity_menu_font_small"
@@ -34,10 +34,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="10dp"
-                    android:text="작게"
+                    android:text="왼쪽"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="12sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="10dp"
-                    android:text="중간"
+                    android:text="가운데"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="15sp"
@@ -58,10 +58,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:padding="10dp"
-                    android:text="크게"
+                    android:text="오른쪽"
                     android:textAlignment="center"
                     android:textColor="#000000"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
