--- a/app/src/main/res/layout/write_layout_color.xml
+++ b/app/src/main/res/layout/write_layout_color.xml
@@ -8,29 +8,29 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:orientation="vertical">
+        android:layout_height="80dp">
 
-        <ScrollView
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:background="@drawable/write_activity_menu_popup"
             android:elevation="2dp"
-
             android:padding="3dp">
 
 
             <LinearLayout
+                android:id="@+id/llColorMain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/write_activity_menu_popup"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/tv_write_activity_menu_color_black"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_black" />
 
@@ -38,6 +38,7 @@
                     android:id="@+id/tv_write_activity_menu_color_purple"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_purple" />
 
@@ -45,6 +46,7 @@
                     android:id="@+id/tv_write_activity_menu_color_blue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_blue" />
 
@@ -52,6 +54,7 @@
                     android:id="@+id/tv_write_activity_menu_color_sky"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_sky" />
 
@@ -59,6 +62,7 @@
                     android:id="@+id/tv_write_activity_menu_color_green"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_green" />
 
@@ -66,6 +70,7 @@
                     android:id="@+id/tv_write_activity_menu_color_yellow"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_yellow" />
 
@@ -73,6 +78,7 @@
                     android:id="@+id/tv_write_activity_menu_color_orange"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_orange" />
 
@@ -80,11 +86,12 @@
                     android:id="@+id/tv_write_activity_menu_color_red"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     app:srcCompat="@drawable/write_activity_color_red" />
 
             </LinearLayout>
-        </ScrollView>
+        </HorizontalScrollView>
     </LinearLayout>
 
 </LinearLayout>
