--- a/app/src/main/res/layout/layout_widget.xml
+++ b/app/src/main/res/layout/layout_widget.xml
@@ -6,10 +6,10 @@
 
     <TextView
         android:id="@+id/imageView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/ic_baseline_create_24"
+        android:background="@drawable/group_27"
         android:clipChildren="true"
         android:textColor="#ffffff" />
 
