--- a/app/src/main/res/layout/main_card_item.xml
+++ b/app/src/main/res/layout/main_card_item.xml
@@ -1,160 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/view_main_card"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:layout_margin="5dp">
 
-    <FrameLayout
-        android:layout_width="200dp"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/home_memo_ex"></ImageView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/main_card"
-        android:elevation="3dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="15dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="15dp">
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_main_card_date_left"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2020.11.1 5AM 10Min"
+                android:textColor="#FF7373"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_main_card_title_left"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="가馬娘あㅁAs@.'!*8가馬娘あㅁAs@.'!*8"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-
-            <LinearLayout
+            <jp.wasabeef.richeditor.RichEditor
+                android:id="@+id/tv_main_card_content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content" />
 
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/tv_main_card_date_left"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2020.11.1 5AM 10Min"
-                        android:textColor="#FF7373"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_main_card_title_left"
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="I want Bab"
-                        android:textColor="#000000"
-                        android:textSize="18sp" />
-
-                </FrameLayout>
-
-                <!-- Line 1 -->
-                <View
-                    android:id="@+id/line_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="1dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/line1" />
-
-                <TextView
-                    android:id="@+id/tv_main_card_content_left"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1.bab\n2.bookbab\n3.gobab"
-                    android:textColor="#FF000000"
-                    android:textSize="14sp" />
-
-
-            </LinearLayout>
         </LinearLayout>
 
-    </FrameLayout>
+    </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/main_card"
-        android:elevation="3dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="15dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="15dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/tv_main_card_date_right"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2020.11.1 5AM 10Min"
-                        android:textColor="#FF7373"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_main_card_title_right"
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="I want Bab"
-                        android:textColor="#000000"
-                        android:textSize="18sp" />
-
-                </FrameLayout>
-
-                <!-- Line 1 -->
-                <View
-                    android:id="@+id/line_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="1dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/line1" />
-
-                <TextView
-                    android:id="@+id/tv_main_card_content_right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1.bab\n2.bookbab\n3.gobab"
-                    android:textColor="#FF000000"
-                    android:textSize="14sp" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </FrameLayout>
-
-
-</LinearLayout>
+</FrameLayout>
