--- a/app/src/main/res/layout/main_top_card_item.xml
+++ b/app/src/main/res/layout/main_top_card_item.xml
@@ -9,8 +9,10 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:layout_margin="5dp"
+        android:layout_marginBottom="2.5dp"
         android:background="@drawable/main_top_card"
-        android:elevation="2dp">
+        android:elevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -86,8 +88,7 @@
                 android:text="1.bab\n2.gogi\n3.kimchi\n4.ddeok\n1.bab\n2.gogi\n3.kimchi\n4.ddeok\n"
                 android:textColor="#99000000"
                 android:textSize="14sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
