--- a/app/src/main/res/layout/main_top_card_item_important.xml
+++ b/app/src/main/res/layout/main_top_card_item_important.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:background="@drawable/main_top_card"
-        android:elevation="2dp">
+        android:layout_margin="5dp"
+        android:elevation="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,7 +85,7 @@
                         android:textColor="#FF6D6D"
                         android:textSize="14sp"
                         android:textStyle="bold"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </LinearLayout>
 
             </LinearLayout>
